--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -47,6 +47,8 @@
     <ClCompile Include="wave\BaseWave.cpp" />
     <ClCompile Include="wave\TestWave.cpp" />
     <ClCompile Include="wave\FlickWave.cpp" />
+    <ClCompile Include="wave\EasyWave.cpp" />
+    <ClCompile Include="wave\FollowWave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -88,6 +90,8 @@
     <ClInclude Include="wave\BaseWave.h" />
     <ClInclude Include="wave\TestWave.h" />
     <ClInclude Include="wave\FlickWave.h" />
+    <ClInclude Include="wave\EasyWave.h" />
+    <ClInclude Include="wave\FollowWave.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\OBJShaderHeader.hlsli" />
