FollWave(追いAIMWave)関連追加 BaseTargetの整理 MoveTargetの追加

--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -46,10 +46,10 @@
     <ClCompile Include="ui\Stopwatch.cpp" />
     <ClCompile Include="wave\BaseWave.cpp" />
     <ClCompile Include="wave\TestWave.cpp" />
-    <ClCompile Include="wave\EasyWave.cpp" />
     <ClCompile Include="wave\FlickWave.cpp" />
     <ClCompile Include="wave\EasyWave.cpp" />
     <ClCompile Include="wave\FollowWave.cpp" />
+    <ClCompile Include="target\MoveTarget.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -90,10 +90,10 @@
     <ClInclude Include="ui\Stopwatch.h" />
     <ClInclude Include="wave\BaseWave.h" />
     <ClInclude Include="wave\TestWave.h" />
-    <ClInclude Include="wave\EasyWave.h" />
     <ClInclude Include="wave\FlickWave.h" />
     <ClInclude Include="wave\EasyWave.h" />
     <ClInclude Include="wave\FollowWave.h" />
+    <ClInclude Include="target\MoveTarget.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\OBJShaderHeader.hlsli" />
