--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -51,6 +51,7 @@
     <ClCompile Include="target\MoveTarget.cpp" />
     <ClCompile Include="2d\SpriteData.cpp" />
     <ClCompile Include="manager\SceneManager.cpp" />
+    <ClCompile Include="scene\OptionGS.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -96,6 +97,7 @@
     <ClInclude Include="target\MoveTarget.h" />
     <ClInclude Include="2d\SpriteData.h" />
     <ClInclude Include="manager\SceneManager.h" />
+    <ClInclude Include="scene\OptionGS.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\OBJShaderHeader.hlsli" />
