シーン変更時の演出を追加（要改善）

--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -46,11 +46,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>$(LibraryPath)</LibraryPath>
-    <IncludePath>$(ProjectDir);$(ProjectDir)3d\;$(ProjectDir)2d\;$(ProjectDir)camera\;$(ProjectDir)base\;$(ProjectDir)input\;$(ProjectDir)audio\;$(ProjectDir)scene\;$(ProjectDir)dynamics\;$(ProjectDir)xinput\;$(ProjectDir)player\;$(ProjectDir)shader\;$(ProjectDir)target;$(ProjectDir)ui;$(ProjectDir)wave;$(ProjectDir)manager;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);$(ProjectDir)3d\;$(ProjectDir)2d\;$(ProjectDir)camera\;$(ProjectDir)base\;$(ProjectDir)input\;$(ProjectDir)audio\;$(ProjectDir)scene\;$(ProjectDir)dynamics\;$(ProjectDir)xinput\;$(ProjectDir)player\;$(ProjectDir)shader\;$(ProjectDir)target;$(ProjectDir)ui;$(ProjectDir)wave;$(ProjectDir)manager;$(ProjectDir)transition;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir);$(ProjectDir)3d\;$(ProjectDir)2d\;$(ProjectDir)camera\;$(ProjectDir)base\;$(ProjectDir)input\;$(ProjectDir)audio\;$(ProjectDir)scene\;$(ProjectDir)dynamics\;$(ProjectDir)xinput\;$(ProjectDir)player\;$(ProjectDir)shader\;$(ProjectDir)target;$(ProjectDir)ui;$(ProjectDir)wave;$(ProjectDir)manager;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);$(ProjectDir)3d\;$(ProjectDir)2d\;$(ProjectDir)camera\;$(ProjectDir)base\;$(ProjectDir)input\;$(ProjectDir)audio\;$(ProjectDir)scene\;$(ProjectDir)dynamics\;$(ProjectDir)xinput\;$(ProjectDir)player\;$(ProjectDir)shader\;$(ProjectDir)target;$(ProjectDir)ui;$(ProjectDir)wave;$(ProjectDir)manager;$(ProjectDir)transition;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -96,6 +96,8 @@
     <ClCompile Include="manager\SceneManager.cpp" />
     <ClCompile Include="scene\OptionGS.cpp" />
     <ClCompile Include="target\MoveTarget.cpp" />
+    <ClCompile Include="transition\BaseTransition.cpp" />
+    <ClCompile Include="transition\BlackOut.cpp" />
     <ClCompile Include="wave\FollowWave.cpp" />
     <ClCompile Include="scene\TestScene.cpp" />
     <ClCompile Include="player\Player.cpp" />
@@ -212,6 +214,8 @@
     <ClInclude Include="manager\SceneManager.h" />
     <ClInclude Include="scene\OptionGS.h" />
     <ClInclude Include="target\MoveTarget.h" />
+    <ClInclude Include="transition\BaseTransition.h" />
+    <ClInclude Include="transition\BlackOut.h" />
     <ClInclude Include="wave\FollowWave.h" />
     <ClInclude Include="scene\TestScene.h" />
     <ClInclude Include="player\Player.h" />
