--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <FxCompile Include="shader\OBJPixelShader.hlsl" />
-    <FxCompile Include="shader\OBJVertexShader.hlsl" />
-    <FxCompile Include="shader\ParticleGS.hlsl" />
-    <FxCompile Include="shader\ParticlePS.hlsl" />
-    <FxCompile Include="shader\ParticleVS.hlsl" />
-    <FxCompile Include="shader\SpritePixelShader.hlsl" />
-    <FxCompile Include="shader\SpriteVertexShader.hlsl" />
+    <FxCompile Include="Resources\shader\OBJPixelShader.hlsl" />
+    <FxCompile Include="Resources\shader\OBJVertexShader.hlsl" />
+    <FxCompile Include="Resources\shader\ParticleGS.hlsl" />
+    <FxCompile Include="Resources\shader\ParticlePS.hlsl" />
+    <FxCompile Include="Resources\shader\ParticleVS.hlsl" />
+    <FxCompile Include="Resources\shader\SpritePixelShader.hlsl" />
+    <FxCompile Include="Resources\shader\SpriteVertexShader.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="2d\Sprite.cpp" />
@@ -104,8 +104,8 @@
     <ClInclude Include="transition\BlackOut.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader\OBJShaderHeader.hlsli" />
-    <None Include="shader\SpriteShaderHeader.hlsli" />
-    <None Include="shader\Particle.hlsli" />
+    <None Include="Resources\shader\OBJShaderHeader.hlsli" />
+    <None Include="Resources\shader\SpriteShaderHeader.hlsli" />
+    <None Include="Resources\shader\Particle.hlsli" />
   </ItemGroup>
 </Project>
