--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -50,6 +50,7 @@
     <ClCompile Include="wave\EasyWave.cpp" />
     <ClCompile Include="wave\FollowWave.cpp" />
     <ClCompile Include="target\MoveTarget.cpp" />
+    <ClCompile Include="base\JsonFileManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -94,6 +95,8 @@
     <ClInclude Include="wave\EasyWave.h" />
     <ClInclude Include="wave\FollowWave.h" />
     <ClInclude Include="target\MoveTarget.h" />
+    <ClInclude Include="base\JsonFileManager.h" />
+    <ClInclude Include="base\picojson.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\OBJShaderHeader.hlsli" />
