--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -56,6 +56,7 @@
     <ClCompile Include="transition\BaseTransition.cpp" />
     <ClCompile Include="transition\BlackOut.cpp" />
     <ClCompile Include="manager\ModelManager.cpp" />
+    <ClCompile Include="camera\OrbitCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -105,6 +106,9 @@
     <ClInclude Include="transition\BaseTransition.h" />
     <ClInclude Include="transition\BlackOut.h" />
     <ClInclude Include="manager\ModelManager.h" />
+    <ClInclude Include="base\JsonFileManager.h" />
+    <ClInclude Include="base\picojson.h" />
+    <ClInclude Include="camera\OrbitCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shader\OBJShaderHeader.hlsli" />
