--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -59,6 +59,7 @@
     <ClCompile Include="manager\ModelManager.cpp" />
     <ClCompile Include="camera\OrbitCamera.cpp" />
     <ClCompile Include="manager\WaveManager.cpp" />
+    <ClCompile Include="ui\SelectUi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -113,6 +114,7 @@
     <ClInclude Include="base\picojson.h" />
     <ClInclude Include="camera\OrbitCamera.h" />
     <ClInclude Include="manager\WaveManager.h" />
+    <ClInclude Include="ui\SelectUi.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shader\OBJShaderHeader.hlsli" />
