uiの削除をベースで

--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -61,6 +61,7 @@
     <ClCompile Include="manager\WaveManager.cpp" />
     <ClCompile Include="ui\SelectUi.cpp" />
     <ClCompile Include="ui\Ranking.cpp" />
+    <ClCompile Include="wave\AroundWave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -117,6 +118,7 @@
     <ClInclude Include="ui\Ranking.h" />
     <ClInclude Include="manager\WaveManager.h" />
     <ClInclude Include="ui\SelectUi.h" />
+    <ClInclude Include="wave\AroundWave.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shader\OBJShaderHeader.hlsli" />
