--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="transition\BlackOut.cpp" />
     <ClCompile Include="ui\ResultUi.cpp" />
     <ClCompile Include="ui\SelectUi.cpp" />
+    <ClCompile Include="wave\AroundWave.cpp" />
     <ClCompile Include="wave\FollowWave.cpp" />
     <ClCompile Include="scene\TestScene.cpp" />
     <ClCompile Include="player\Player.cpp" />
@@ -232,6 +233,7 @@
     <ClInclude Include="transition\BlackOut.h" />
     <ClInclude Include="ui\ResultUi.h" />
     <ClInclude Include="ui\SelectUi.h" />
+    <ClInclude Include="wave\AroundWave.h" />
     <ClInclude Include="wave\FollowWave.h" />
     <ClInclude Include="scene\TestScene.h" />
     <ClInclude Include="player\Player.h" />
