--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="ui\SelectUi.cpp" />
     <ClCompile Include="ui\Ranking.cpp" />
     <ClCompile Include="wave\AroundWave.cpp" />
+    <ClCompile Include="target\EasyTarget.cpp" />
+    <ClCompile Include="target\ScaleTarget.cpp" />
+    <ClCompile Include="wave\ScaleWave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\Sprite.h" />
@@ -119,6 +122,9 @@
     <ClInclude Include="manager\WaveManager.h" />
     <ClInclude Include="ui\SelectUi.h" />
     <ClInclude Include="wave\AroundWave.h" />
+    <ClInclude Include="target\EasyTarget.h" />
+    <ClInclude Include="target\ScaleTarget.h" />
+    <ClInclude Include="wave\ScaleWave.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shader\OBJShaderHeader.hlsli" />
